[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "grad-cam>=1.5.5",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.49.0",
]
